# TTetris

./: CMakeLists.txt  README.md  TProject.c  TProject01.c  TProjectGCC.sh  Tengine.h  Tengine0.7.c  Tengine0.8.c  Tengine_core.c
Proggetto_TTetris/Proggetto_TTetris/: TProjectGCCdebbug.sh  TProject_main01.c  TTetris  Tengine_core.h  Tengine_scoreboard.c
include/core/: Tengine_scoreboard.h
src/core/: TProject_main01.c  Tengine_core.c  Tengine_scoreboard.c
